# Phoenix

./: .gitignore  .gitpod.yml  MANIFEST.in  README.rst  build.py  pyproject.toml  setup-wxsvg.py  setup.py  wscript
.github/workflows/: ci-build.yml  cibuildwheel.yml  wheels.yml
buildtools/: config.py  distutils_hacks.py  sipdistutils.py
etg/: busyinfo.py  clipbrd.py  config.py  dc.py  dialog.py  event.py  evtloop.py  grid.py  log.py  power.py  utils.py  window.py
etgtools/: extractors.py  pi_generator.py  sip_generator.py  sphinx_generator.py  tweaker_tools.py
requirements/: devel.txt  install.txt
sphinxtools/: utilities.py
unittests/: test_filedlgcustomize.py  test_richmsgdlg.py
wx/lib/: busy.py
wx/lib/plot/: utils.py
wx/svg/: _nanosvg.c  _nanosvg.pxd  _nanosvg.pyx
