[project]
name = "wxPython"
dynamic = [
    "description",
    "readme",
    "license",
    "authors",
    "keywords",
    "classifiers",
    "urls",
    "scripts",
    "dependencies",
    "version"
 ]

[build-system]
requires = [
    "setuptools>=70.1",
    "cython == 3.0.10",
    "sip == 6.9.1",
]
