[project]
name = "wxPython"
dynamic = [
    "authors",
    "classifiers",
    "dependencies",
    "description",
    "keywords",
    "license",
    "readme",
    "scripts",
    "urls",
    "version"
 ]

[build-system]
requires = [
    "setuptools>=70.1",
    "cython == 3.0.10",
    "requests >= 2.26.0",
    "sip == 6.9.1",
]

[tool.setuptools.packages.find]
namespaces = false
